--- a/momentum/requirements.txt
+++ b/momentum/requirements.txt
@@ -9,10 +9,12 @@ crashtest==0.4.1
 cryptography==41.0.4
 distlib==0.3.7
 Django==5.1.2
+django-bootstrap5==24.3
 dulwich==0.21.6
 environs==11.0.0
 fastjsonschema==2.18.1
 filelock==3.12.2
+gunicorn==23.0.0
 idna==3.4
 importlib-metadata==6.8.0
 installer==0.7.0
@@ -30,6 +32,8 @@ platformdirs==3.11.0
 poetry==1.8.3
 poetry-core==1.9.0
 poetry-plugin-export==1.8.0
+psycopg-binary==3.2.3
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pycparser==2.21
 pyproject_hooks==1.0.0
