--- a/momentum/nginx/nginx.conf
+++ b/momentum/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream web {
-    server localhost:9009;
+    server localhost:8080;
 }
 
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=cache:10m inactive=24h max_size=1g;
@@ -36,7 +36,7 @@ server {
     }
 
     location / {
-        proxy_pass http://web;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
