--- a/momentum/requirements.txt
+++ b/momentum/requirements.txt
@@ -1,21 +1,33 @@
 asgiref==3.8.1
+async-timeout==4.0.1
+beautifulsoup4==4.10.0
+blinker==1.4
 build==1.0.3
 CacheControl==0.14.0
 certifi==2023.7.22
 cffi==1.16.0
+chardet==4.0.0
 charset-normalizer==3.3.0
 cleo==2.1.0
+click==8.0.3
+colorama==0.4.4
+configobj==5.0.6
 crashtest==0.4.1
 cryptography==41.0.4
+dbus-python==1.2.18
 distlib==0.3.7
+distro==1.7.0
 Django==5.1.2
 django-bootstrap5==24.3
 dulwich==0.21.6
 environs==11.0.0
+Faker==30.8.0
 fastjsonschema==2.18.1
 filelock==3.12.2
 gunicorn==23.0.0
+httplib2==0.20.2
 idna==3.4
+ifaddr==0.1.7
 importlib-metadata==6.8.0
 installer==0.7.0
 jaraco.classes==3.3.0
@@ -24,30 +36,54 @@ keyring==24.2.0
 marshmallow==3.23.0
 more-itertools==10.1.0
 msgpack==1.0.7
+mutagen==1.45.1
+netaddr==0.8.0
+netifaces==0.11.0
+oauthlib==3.2.0
 packaging==23.2
 pexpect==4.9.0
+pillow==11.0.0
 pipenv==2023.12.1
 pkginfo==1.10.0
 platformdirs==3.11.0
 poetry==1.8.3
 poetry-core==1.9.0
 poetry-plugin-export==1.8.0
+psutil==5.9.0
 psycopg-binary==3.2.3
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
+pycairo==1.20.1
 pycparser==2.21
+pycryptodomex==3.11.0
+pycurl==7.44.1
+pyelftools==0.27
+pyparsing==2.4.7
 pyproject_hooks==1.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-gnupg==0.4.8
+python-magic==0.4.24
+python-xlib==0.29
+pyxdg==0.27
+qrcode==7.3.1
 rapidfuzz==3.5.2
 requests==2.31.0
+requests-file==2.1.0
 requests-toolbelt==1.0.0
 SecretStorage==3.3.3
+setproctitle==1.2.2
 shellingham==1.5.3
+six==1.16.0
+soupsieve==2.3.1
 sqlparse==0.5.1
+systemd-python==234
+tldextract==3.1.2
 tomlkit==0.12.1
 trove-classifiers==2023.9.19
+typing_extensions==4.12.2
 urllib3==2.0.6
 virtualenv==20.26.2
+websockets==9.1
+xdg==5.0.0
 zipp==3.17.0
-
-Faker~=30.8.0
