--- a/momentum/docker-compose.yml
+++ b/momentum/docker-compose.yml
@@ -60,9 +60,9 @@ services:
 volumes:
   pg_data:
     driver: local
-  app:
-    driver: local
-  nginx:
+#  app:
+#    driver: local
+#  nginx:
 
 
 networks:
